# dot

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package.json
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  tauri.conf.json
backend/icons/: create_icon.py
backend/src/: commands.rs  lib.rs  main.rs
backend/src/pet/: achievements.rs  evolution.rs  lifecycle.rs  mod.rs  needs.rs  state.rs  stats.rs
backend/src/storage/: mod.rs
frontend/: index.html
frontend/js/: api.js  main.js  renderer.js  sprites.js
frontend/styles/: main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/pet/: lifecycle.rs  needs.rs
src/js/: main.js
