[package]
name = "dot"
version = "1.0.2"
description = "A cute Tamagotchi pet that lives in your menu bar"
authors = ["Jason Too"]
license = "MIT"
repository = "https://github.com/tooyipjee/dot"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2"
